--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
